created header in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <h1 class="header__heading-main">
+                <div class="header__logo"></div>
+            </h1>
+            <div class="header__menu-wrap">
+                <ul class="menu">
+                    <li class="menu__item"><a href="#" class="menu__link">Link1</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Link2</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Link3</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">Link4</a></li>
+                </ul>
+            </div>
+        </header>
 
 </body>
 
