--- a/index.html
+++ b/index.html
@@ -23,7 +23,136 @@
                 </ul>
             </div>
         </header>
+        <div class="product">
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name1</h2>
+                    <div class="product__code"><span class="code">001</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3251</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name2</h2>
+                    <div class="product__code"><span class="code">002</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3252</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name3</h2>
+                    <div class="product__code"><span class="code">003</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3253</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name4</h2>
+                    <div class="product__code"><span class="code">004</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3254</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name5</h2>
+                    <div class="product__code"><span class="code">005</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3255</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name6</h2>
+                    <div class="product__code"><span class="code">006</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3256</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name7</h2>
+                    <div class="product__code"><span class="code">007</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3257</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name8</h2>
+                    <div class="product__code"><span class="code">008</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3258</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+            <div class="product__item">
+                <header class="product__header">
+                    <img src="" alt="product" class="product__picture">
+                    <h2 class="product__heading">Product Name9</h2>
+                    <div class="product__code"><span class="code">009</span></div>
+                </header>
+                <div class="product__main">
+                    <p class="product__description">lorem10</p>
+                    <p class="product__price">
+                        <span>3259</span>
+                        <footer class="product__footer"><a href="#" class="product__link">Buy</a></footer>
+                    </p>
+                </div>
+            </div>
+        </div>
 
+    </div>
 </body>
 
 </html>
