--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
             </div>
         </div>
-
+        <footer class="footer"><span>By Nikiforov</span></footer>
     </div>
 </body>
 
